<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:mContext=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toorBar"
        android:fitsSystemWindows="true"
        android:scrollbarSize="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <custom.TabIndicadtor
        android:id="@+id/tabIndicadtor"
        android:layout_width="match_parent"
        android:layout_height="60dp">
    </custom.TabIndicadtor>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />


</LinearLayout>
